<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="29dp"
        android:text="@string/validate"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="launchOverviewActivity"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0sp"
                    android:layout_marginLeft="0sp"
                    android:hint="@string/lastname"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forename_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forename"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forename" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date">


                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="83dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/male"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="83dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/female"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="83dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/other"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


            </RadioGroup>

            <TextView
                android:id="@+id/medications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/medications"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <CheckBox
                android:id="@+id/med1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/num1"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/medications"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <CheckBox
                android:id="@+id/med2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/num2"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/medications"
                app:layout_constraintTop_toBottomOf="@+id/med1" />

            <TextView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:text="@string/medical_background"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/med2" />

            <CheckBox
                android:id="@+id/disease1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/d1"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/background"
                app:layout_constraintTop_toBottomOf="@+id/med2" />

            <CheckBox
                android:id="@+id/disease2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/d2"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/background"
                app:layout_constraintTop_toBottomOf="@+id/disease1" />


            <EditText
                android:id="@+id/room_number_text"
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:hint="@string/room_number"
                android:inputType="number"
                android:textSize="20sp"
                android:textStyle="bold" />




        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="21dp"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:onClick="launchOverviewActivity"/>

</RelativeLayout>
