<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity">

    <TextView
        android:id="@+id/patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/patient_name"
        android:padding="@dimen/padding_regular"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/button_modify"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:baselineAlignBottom="true"
        app:layout_constraintBaseline_toBaselineOf="@id/patientName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <ImageButton
        android:id="@+id/button_statistics"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:baselineAlignBottom="true"
        app:layout_constraintBaseline_toBaselineOf="@id/patientName"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/patientName"
        app:srcCompat="@color/design_default_color_primary_dark" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/patientName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="100dp"
        tools:context=".PatientActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                >

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/dehydrationLevel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/photo"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_dehydration_level"
                    android:text="@string/dehydration_level"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/patient_dehydration_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/photo"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_dehydration_level"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/roomNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dehydrationLevel2"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_room_number"
                    android:text="@string/room_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomNumber"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_gender"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_age"
                    android:text="@string/age"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/age"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_gender"
                    android:text="@string/birthday"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/medication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/birthday"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_medication"
                    android:text="@string/medication"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_medication"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_background"
                    android:text="@string/medical_background"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_background"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginBottom="20dp"
                    android:layout_toLeftOf="@+id/patient_history"
                    android:text="@string/history"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/patient_room_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_dehydration_level"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_room_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomNumber"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_gender"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_gender"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_age"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_age"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="20/11/1962"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_medication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_birthday"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_medication"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_medication"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_background"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/patient_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_background"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginBottom="20dp"
                    android:text="@string/patient_history"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>